<resources>
    <string name="app_name">AnimationStudy</string>
    <string name="sds_btn_drawableanim">帧动画</string>
    <string name="sds_btn_tweenanim">Tween动画</string>
    <string name="sds_btn_propertyanim">属性动画</string>
    <string name="sds_btn_nineoldandroids">NineOldAndroids</string>
    <string name="sds_btn_advanced">Advanced</string>
    <string name="sds_btn_activityjump">Activity跳转动画</string>
    <string name="sds_btn_showdialog">Dialog显示动画</string>
    <string name="sds_btn_fragmenttransition">Fragment切换动画</string>
    <string name="sds_btn_viewpagertransition">ViewPager切换动画</string>
    <string name="sds_btn_imitatewandoujia">仿豌豆荚首页动画</string>
    <string name="sds_btn_imitatebaiduread">仿百度阅读气泡</string>
    <string name="sds_btn_imitatemogujie">仿蘑菇街购物车</string>
    <string name="sds_btn_imitateucpulldowneye">仿UC下拉眼睛</string>
    <string name="sds_btn_imitatetaobaoretraction">仿淘宝主页后缩</string>
    <string name="sds_btn_imitatebrowserzoomview">仿浏览器缩放视图</string>
    <string name="sds_btn_viewnaturaltransitionanim">界面自然过渡动画</string>
    <string name="sds_btn_dynamicrotationanim">仿乐动力旋转动画</string>
    <string name="sds_btn_leafflyloadinganim">叶子飞动加载动画</string>
    <string name="sds_btn_sunrosepulltorefreshanim">太阳升起下拉刷新动画</string>
    <string name="sds_btn_zrclistview">ZrcListView好看的下拉刷新</string>
    <string name="sds_btn_imitateathmpulltorefreshanim">仿汽车之家下拉刷新动画</string>
    <string name="sds_btn_imitatemeituanpulltorefreshanim">仿美团下拉刷新动画</string>
    <string name="sds_btn_imitategoogleswiperefreshlayoutanim01">仿Google下拉刷新动画1</string>
    <string name="sds_btn_imitategoogleswiperefreshlayoutanim02">仿Google下拉刷新动画2</string>
    <string name="sds_btn_bgarefreshlayout">开源BGARefreshLayout</string>
    <string name="sds_btn_pulltorefreshanim01">下拉刷新动画01</string>
    <string name="sds_btn_pulltorefreshanim02">下拉刷新动画02</string>
    <string name="sds_btn_pulltorefreshanim03">下拉刷新动画03</string>
    <string name="sds_btn_alphaanim">AlphaAnimation</string>
    <string name="sds_btn_scaleanim">ScaleAnimation</string>
    <string name="sds_btn_translateanim">TranslateAnimation</string>
    <string name="sds_btn_rotateanim">RotateAnimation</string>
    <string name="sds_btn_animset01">动画集01</string>
    <string name="sds_btn_animset02">动画集02</string>
    <string name="sds_btn_animset03">动画集03</string>
    <string name="sds_btn_shakeanim">ShakeAnimation</string>
    <string name="sds_btn_startanim">开始动画</string>
    <string name="sds_btn_stopanim">结束动画</string>
    <string name="sds_btn_showsimpleuse">简单演示</string>
    <string name="sds_btn_next">下一页</string>
    <string name="sds_btn_testtranslate">Translate动画属性</string>
    <string name="sds_btn_testrotate">Rotate动画属性</string>
    <string name="sds_btn_testscale">Scale动画属性</string>
    <string name="sds_btn_testalpha">Alpha动画属性</string>
    <string name="sds_btn_testcolor">Color变化动画</string>
    <string name="sds_btn_testanimset">动画集合</string>
    <string name="sds_btn_testkeyframe">KeyFrame动画</string>
    <string name="sds_btn_testpropertyvaluesholder">PVHolder动画</string>
    <string name="sds_btn_wrapperforproperty">Wrapper包装</string>
    <string name="sds_btn_testviewanimator">ViewAnimator使用</string>
    <string name="sds_btn_objectanimator">ObjectAnimator</string>
    <string name="sds_btn_objectanimator2">ObjectAnimator2</string>
    <string name="sds_btn_animatorset">AnimatorSet</string>
    <string name="sds_btn_animatorupdatelistener">AnimatorUpdateListener</string>
    <string name="sds_btn_animatorlistener">AnimatorListener</string>
    <string name="sds_btn_animatorinflater">AnimatorInflater</string>
    <string name="sds_btn_typeevaluator">TypeEvaluator</string>
    <string name="sds_btn_timeinterpolator">TimeInterpolator</string>
    <string name="sds_btn_layoutanim">Layout Animation</string>
    <string name="sds_btn_layoutanimdefault">Layout Animation Default</string>
    <string name="sds_btn_layoutanimhideshow">Layout Animation Hide Show</string>
    <string name="sds_btn_animstreamcontrol">动画流控制</string>
    <string name="sds_btn_commonpropertyanim">普通属性动画</string>
    <string name="sds_btn_objectpropertyanim">Object属性动画</string>
    <string name="sds_btn_animbypath">通过Path实现动画</string>
    <string name="sds_btn_filponvertical">垂直翻转动画</string>
    <string name="sds_btn_rectanim">Rect</string>
    <string name="sds_btn_rgbanim">RGB</string>
    <string name="sds_btn_hsvanim">Hsv</string>
    <string name="sds_btn_skewanim">Skew</string>
    <string name="sds_btn_horizontalslidetrans">左右滑动切换</string>
    <string name="sds_btn_verticalslidetrans">上下滑动切换</string>
    <string name="sds_btn_scaleuptrans">按比例扩大切换</string>
    <string name="sds_btn_thumbnailtrans">缩略图放大切换</string>
    <string name="sds_btn_scenetrans">场景转换切换</string>
    <string name="sds_btn_verticaltransfer">垂直过渡切换</string>
    <string name="sds_btn_fadeinfadeouttrans">淡入淡出切换</string>
    <string name="sds_btn_activityoptionscompatuse">ActivityOptiosCompat使用</string>
    <string name="sds_btn_bganormallistview">BGA NormalListView</string>
    <string name="sds_btn_bganormalrecycleview">BGA NormalRecycleView</string>
    <string name="sds_btn_bgaswipelistview">BGA SwipeListView</string>
    <string name="sds_btn_bgaswiperecycleview">BGA SwipeRecycleView</string>
    <string name="sds_btn_bgascrollview">BGA ScrollView</string>
    <string name="sds_btn_bgawebview">BGA WebView</string>
    <string name="sds_btn_bgaviewpager">BGA ViewPager</string>
    <string name="sds_btn_bgastickynav">BGA StickyNav</string>
    <string name="sds_btn_finish">关闭</string>
    <string name="sds_cb_keepanimstatus">保持动画结束状态</string>
    <string name="sds_cb_loadxmlanim">加载xml动画</string>
    <string name="sds_cb_usegridlayout">使用GridLayout</string>
    <string name="sds_cb_changepoliceboximg">替换为PoliceBox图片</string>
    <string name="sds_cb_showtrananimimg">显示位移动画图片</string>
    <string name="sds_cb_useactivityoptionscompat">使用AOCompat</string>
    <string name="sds_cb_useactivityoptionscompatics">使用AOCompatOCS</string>
    <string name="sds_cb_changepathview">转换另一个</string>
    <string name="sds_cb_showlistview">显示LV</string>
    <string name="sds_cb_showgridview">显示GV</string>
    <string name="sds_cb_showwebview">显示WV</string>
    <string name="sds_cb_showscrollview">显示SV</string>
    <string name="sds_tv_activityjumptip">Activity跳转动画演示</string>
    <string name="sds_tv_firstactivitytip">这是第一个Activity</string>
    <string name="sds_tv_secondactivitytip">这是第二个Activity</string>
    <string name="tower_of_london">The Tower of London has played a prominent role in English history. It was besieged several times and controlling it has been important to controlling the country. The Tower has served variously as an armoury, a treasury, a menagerie, the home of the Royal Mint, a public records office, and the home of the Crown Jewels of the United Kingdom. From the early 14th century until the reign of Charles II, a procession would be led from the Tower to Westminster Abbey on the coronation of a monarch. In the absence of the monarch, the Constable of the Tower is in charge of the castle. This was a powerful and trusted position in the medieval period. In the late 15th century the castle was the prison of the Princes in the Tower. Under the Tudors, the Tower became used less as a royal residence, and despite attempts to refortify and repair the castle its defences lagged behind developments to deal with artillery.</string>
    <string name="title_uidrawableanim">FrameAnim</string>
    <string name="title_uitweenanim">TweenAnim</string>
    <string name="title_uipropertyanim">PropertyAnim</string>
    <string name="title_uinineoldandroids">NineOldAndroids</string>
    <string name="title_uiadvanced">Advanced</string>
    <string name="title_uiimitatewandoujia">ImitateWandoujia</string>
    <string name="long_test_text">掌傲博是一家专注科技创新的移动互联网公司，2014年3月创立，团队成员来自国内顶级互联网企业，正以锐不可挡之势，快速成长成华南乃至全国的互联网金融先锋企业。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。小道消息为用户娱乐性质，一切消息未经证实，用户使用默认同意《微财》免责条款。</string>
    <string name="title_activity_ui_imitate_baidu_read_bubble">ImitateBaiduReadBubble</string>
    <string name="title_activity_ui_imitate_mogujie_cart">ImitateMogujieCart</string>
    <string name="title_activity_ui_imitate_ucpull_down_eye">ImitateUCPullDownEye</string>
    <string name="myyuedu_import_freezone">书城导入</string>
    <string name="myyuedu_import_pc">电脑导入</string>
    <string name="myyuedu_import_sdcard">本机导入</string>
    <string name="detail_bottom_cart_btn">加入购物车</string>
    <string name="title_activity_ui_imitate_taobao_retraction">ImitateTaobaoRetraction</string>
    <string name="current_mplitude">修改中等振幅，当前%1$s</string>
    <string name="current_Disparity">修改振幅差距，当前%1$s</string>
    <string name="tv_current_float_time">修改移动速度，当前%1$s</string>
    <string name="current_rotate_time">修改旋转速度，当前%1$s</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ui_imitate_browser_zoom_view">ImitateBrowserZoomView</string>
    <string name="title_activity_ui_view_natrue_transition_anim">ViewNatrueTransitionAnim</string>
    <string name="title_activity_ui_pull_to_refresh_anim01">PullToRefreshAnim01</string>
    <string name="title_activity_ui_pull_to_refresh_anim02">PullToRefreshAnim02</string>
    <string name="title_activity_ui_pull_to_refresh_anim03">PullToRefreshAnim03</string>
</resources>