<merge xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/sdi_imitatewandoujia_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_imitatewandoujia"
        android:onClick="toImitateWandoujia"/>
    <Button
        android:id="@+id/sdi_imitatebaiduread_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatewandoujia_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_imitatebaiduread"
        android:onClick="toImitateBaiduRead"/>
    <Button
        android:id="@+id/sdi_imitatemogujie_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatebaiduread_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_imitatemogujie"
        android:onClick="toImitateMogujie"/>
    <Button
        android:id="@+id/sdi_imitateucpulldowneye_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatemogujie_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_imitateucpulldowneye"
        android:onClick="toImitateUCPullDownEye"/>
    <Button
        android:id="@+id/sdi_imitatetaobaoretraction_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitateucpulldowneye_btn"
        android:text="@string/sds_btn_imitatetaobaoretraction"
        android:onClick="toImitateTaobaoRetraction"/>
    <Button
        android:id="@+id/sdi_imitatebrowserzoomview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatetaobaoretraction_btn"
        android:text="@string/sds_btn_imitatebrowserzoomview"
        android:onClick="toImitateBrowserZoomView" />
    <Button
        android:id="@+id/sdi_viewnaturaltransitionanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatebrowserzoomview_btn"
        android:text="@string/sds_btn_viewnaturaltransitionanim"
        android:textAllCaps="false"
        android:onClick="toViewNatureTransitionAnim" />
    <Button
        android:id="@+id/sdi_dynamicrotationanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_viewnaturaltransitionanim_btn"
        android:text="@string/sds_btn_dynamicrotationanim"
        android:onClick="toDynamicRotationAnim" />
    <Button
        android:id="@+id/sdi_leafflyloadinganim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_dynamicrotationanim_btn"
        android:text="@string/sds_btn_leafflyloadinganim"
        android:onClick="toLeafFlyLoadingAnim" />
    <Button
        android:id="@+id/sdi_sunrosepulltorefreshanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_leafflyloadinganim_btn"
        android:text="@string/sds_btn_sunrosepulltorefreshanim"
        android:onClick="toSunRosePullToRefreshAnim" />
    <Button
        android:id="@+id/sdi_zrclistview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_sunrosepulltorefreshanim_btn"
        android:text="@string/sds_btn_zrclistview"
        android:onClick="toZrcListView"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/sdi_imitateathmpulltorefreshanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_zrclistview_btn"
        android:text="@string/sds_btn_imitateathmpulltorefreshanim"
        android:onClick="toImitateATHMPullToRefreshAnim" />
    <Button
        android:id="@+id/sdi_imitatemeituanpulltorefreshanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitateathmpulltorefreshanim_btn"
        android:text="@string/sds_btn_imitatemeituanpulltorefreshanim"
        android:onClick="toImitateMeiTuanPullToRefreshAnim" />
    <Button
        android:id="@+id/sdi_imitategoogleswiperefreshlayout01_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitatemeituanpulltorefreshanim_btn"
        android:text="@string/sds_btn_imitategoogleswiperefreshlayoutanim01"
        android:onClick="toImitateGoogleSwipeRefreshLayoutAnim01" />
    <Button
        android:id="@+id/sdi_imitategoogleswiperefreshlayout02_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitategoogleswiperefreshlayout01_btn"
        android:text="@string/sds_btn_imitategoogleswiperefreshlayoutanim02"
        android:onClick="toImitateGoogleSwipeRefreshLayoutAnim02" />
    <Button
        android:id="@+id/sdi_bgarefreshlayout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_imitategoogleswiperefreshlayout02_btn"
        android:text="@string/sds_btn_bgarefreshlayout"
        android:onClick="toBGARefreshLayout" />
    <Button
        android:id="@+id/sdi_pulltorefreshanim01_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_bgarefreshlayout_btn"
        android:text="@string/sds_btn_pulltorefreshanim01"
        android:onClick="toPullToRefreshAnim01" />
    <Button
        android:id="@+id/sdi_pulltorefreshanim02_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_pulltorefreshanim01_btn"
        android:text="@string/sds_btn_pulltorefreshanim02"
        android:onClick="toPullToRefreshAnim02" />
    <Button
        android:id="@+id/sdi_pulltorefreshanim03_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_pulltorefreshanim02_btn"
        android:text="@string/sds_btn_pulltorefreshanim03"
        android:onClick="toPullToRefreshAnim03" />
</RelativeLayout>
</ScrollView>
</merge>