<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<Button
    android:id="@+id/sdi_anim_view"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_gravity="right"
    android:layout_margin="5dp"
    android:background="@mipmap/sdd_football_icon" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cheng.animationstudy.ui.UiPropertyAnim">
    <Button
        android:id="@+id/sdi_showsimpleuse_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/sds_btn_showsimpleuse"
        android:onClick="showSimpleUse"/>
    <Button
        android:id="@+id/sdi_nineoldandroids_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/sdi_next_btn"
        android:text="@string/sds_btn_nineoldandroids"
        android:textAllCaps="false"
        android:onClick="toNineOldAndroids"/>
    <Button
        android:id="@id/sdi_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sds_btn_next"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="toNext"/>
    <Button
        android:id="@+id/sdi_testtranslate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_showsimpleuse_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testtranslate"
        android:textAllCaps="false"
        android:onClick="testTranslation"/>
    <Button
        android:id="@+id/sdi_testrotate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testtranslate_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testrotate"
        android:textAllCaps="false"
        android:onClick="testRotate"/>
    <Button
        android:id="@+id/sdi_testscale_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testrotate_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testscale"
        android:textAllCaps="false"
        android:onClick="testScale"/>
    <Button
        android:id="@+id/sdi_testalpha_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testscale_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testalpha"
        android:textAllCaps="false"
        android:onClick="testAlpha"/>
    <Button
        android:id="@+id/sdi_testcoloranim_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testalpha_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testcolor"
        android:textAllCaps="false"
        android:onClick="testColor"/>
    <Button
        android:id="@+id/sdi_testanimset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testcoloranim_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_testanimset"
        android:textAllCaps="false"
        android:onClick="testAnimSet"/>
    <Button
        android:id="@+id/sdi_testkeyframe_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_showsimpleuse_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_testkeyframe"
        android:textAllCaps="false"
        android:onClick="testKeyFrame"/>
    <Button
        android:id="@+id/sdi_testpropertyvaluesholder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testkeyframe_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_testpropertyvaluesholder"
        android:textAllCaps="false"
        android:onClick="testPropertyValuesHolder"/>
    <Button
        android:id="@+id/sdi_wrapperforproperty_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testpropertyvaluesholder_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_wrapperforproperty"
        android:textAllCaps="false"
        android:onClick="testWrapperforProperty"/>
    <Button
        android:id="@+id/sdi_testviewanimator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/sdi_testalpha_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_testviewanimator"
        android:textAllCaps="false"
        android:onClick="testValueAnimator"/>
    <Button
        android:id="@+id/sdi_objectanimator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testviewanimator_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_objectanimator"
        android:textAllCaps="false"
        android:onClick="testObjectAnimator" />
    <Button
        android:id="@+id/sdi_objectanimator_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_objectanimator_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_objectanimator2"
        android:textAllCaps="false"
        android:onClick="testObjectAnimator" />
    <Button
        android:id="@+id/sdi_animatorset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sdi_animatorinflater_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_animatorset"
        android:textAllCaps="false"
        android:onClick="testAnimatorSet" />
    <Button
        android:id="@+id/sdi_animatorupdatelistener_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_testanimset_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_animatorupdatelistener"
        android:textAllCaps="false"
        android:onClick="testAnimatorUpdateListener"/>
    <Button
        android:id="@+id/sdi_animatorlistener_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_animatorupdatelistener_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_animatorlistener"
        android:textAllCaps="false"
        android:onClick="testAnimatorListener"/>
    <Button
        android:id="@+id/sdi_animatorinflater_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/sdi_animatorlistener_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/sds_btn_animatorinflater"
        android:textAllCaps="false"
        android:onClick="testAnimatorInfalter"/>
    <Button
        android:id="@+id/sdi_typeevaluator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_animatorlistener_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_typeevaluator"
        android:textAllCaps="false"
        android:onClick="testTypeEvaluator"/>
    <Button
        android:id="@+id/sdi_timeinterpolator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/sdi_typeevaluator_btn"
        android:layout_alignEnd="@id/sdi_animatorinflater_btn"
        android:text="@string/sds_btn_timeinterpolator"
        android:textAllCaps="false"
        android:onClick="testTimeInterpolator"/>
</RelativeLayout>
<include layout="@layout/ui_imitatebaiduread_menulayout"/>
</merge>