<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark_green">
    <TextView
        android:id="@+id/sdi_tip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sds_tv_activityjumptip"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/sdi_firstactivitytip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_tip_tv"
        android:layout_alignParentStart="true"
        android:text="@string/sds_tv_firstactivitytip"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/sdi_horizontalslide_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_firstactivitytip_tv"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_horizontalslidetrans"
        android:onClick="showHorizontalSlideTransition"/>
    <Button
        android:id="@+id/sdi_verticleslide_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_horizontalslide_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_verticalslidetrans"
        android:onClick="showVerticleTransition"/>
    <Button
        android:id="@+id/sdi_scaleuptrans_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_verticleslide_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_scaleuptrans"
        android:onClick="showScaleUpTrans"/>
    <Button
        android:id="@+id/sdi_thumbnailtrans_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_scaleuptrans_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_thumbnailtrans"
        android:onClick="showThumbnailTrans"/>
    <Button
        android:id="@+id/sdi_scenetrans_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_thumbnailtrans_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_scenetrans"
        android:onClick="showSceneTrans"/>
    <Button
        android:id="@+id/sdi_verticaltransfer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_scenetrans_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_verticaltransfer"
        android:onClick="showVerticalTransfer"/>
    <Button
        android:id="@+id/sdi_fadeinfadeouttrans_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_verticaltransfer_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_fadeinfadeouttrans"
        android:onClick="showFadeInFadeOutTrans"/>
</RelativeLayout>
