<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <Button
        android:id="@+id/sdi_drawableanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toDrawableAnim"
        android:text="@string/sds_btn_drawableanim" />
    <Button
        android:id="@+id/sdi_tweenanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_drawableanim_btn"
        android:onClick="toTweenAnim"
        android:textAllCaps="false"
        android:text="@string/sds_btn_tweenanim" />
    <Button
        android:id="@+id/sdi_propertyanim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sdi_tweenanim_btn"
        android:onClick="toPropertyAnim"
        android:text="@string/sds_btn_propertyanim"/>
    <Button
        android:id="@+id/sdi_advanced_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_propertyanim_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_advanced"
        android:textAllCaps="false"
        android:onClick="toAdvanced"/>
    <Button
        android:id="@+id/sdi_activityjump_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sdi_advanced_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_activityjump"
        android:textAllCaps="false"
        android:onClick="toActivityJump"/>
    <Button
        android:id="@+id/sdi_showdialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sdi_activityjump_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_showdialog"
        android:textAllCaps="false"
        android:onClick="toShowDialog"/>
    <Button
        android:id="@+id/sdi_fragmenttransition_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sdi_showdialog_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_fragmenttransition"
        android:textAllCaps="false"
        android:onClick="toFragmentTransition"/>
    <Button
        android:id="@+id/sdi_viewpagertransition_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sdi_fragmenttransition_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_viewpagertransition"
        android:textAllCaps="false"
        android:onClick="toViewPagerTransition"/>
</RelativeLayout>
